--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
+    "pdfjs-dist": "^5.3.93",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
@@ -54,8 +55,10 @@
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "shadcn": "latest",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
+    "tesseract.js": "^6.0.1",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
